--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -10,4 +10,11 @@ services:
         - NODE_ENV=production
     environment:
       - NODE_ENV=production
+      - MONGO_USER=${MONGO_USER}
+      - MONGO_PASSWORD=${MONGO_PASSWORD}
+      - SESSIONS_SECRET=${SESSIONS_SECRET}
     command: node index.js
+  mongoapp:
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
