--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
   node-app:
+    image: thevaibhavmishra/node-app
     environment:
       - PORT=3000
     depends_on:
