--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,27 @@
-version: '3'
+version: "3"
 services:
   nginx:
     image: nginx:stable-alpine
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      # - ./nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - node-app
   node-app:
-    image: thevaibhavmishra/node-app
+    build: .
     environment:
-      - PORT=3000
+      - PORT=3000 
     depends_on:
       - mongoapp
+    
   mongoapp:
     image: mongo
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=mongoadmin
+      - MONGO_INITDB_ROOT_PASSWORD=mongopass
     volumes:
       - mongo-db:/data/db
+    
   redisapp:
     image: redis
 
